crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__orphan-scenario.json.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: json_output
---
{
  "schema_version": 1,
  "tool_version": "0.1.0",
  "repo": {
    "name": "orphan-scenario"
  },
  "nodes": [
    {
      "id": "crate:engine",
      "kind": "crate",
      "title": "engine",
      "summary": null,
      "paths": [
        {
          "pattern": "crates\\engine"
        }
      ],
      "attrs": {
        "manifest_path": "crates/engine/Cargo.toml",
        "version": "0.1.0"
      },
      "provenance": {
        "source": "Cargo.toml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "scen:lonely",
      "kind": "scenario",
      "title": "Lonely scenario",
      "summary": null,
      "paths": [],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    }
  ],
  "edges": [],
  "diagnostics": [
    {
      "code": "scenario_missing_command",
      "severity": "error",
      "message": "scenario `scen:lonely` does not declare a proving command",
      "subject": "scen:lonely",
      "location": {
        "path": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null
      }
    },
    {
      "code": "scenario_missing_crate",
      "severity": "error",
      "message": "scenario `scen:lonely` does not declare an exercised crate",
      "subject": "scen:lonely",
      "location": {
        "path": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null
      }
    }
  ],
  "metrics": {
    "node_count": 2,
    "edge_count": 0,
    "diagnostic_count": 2,
    "error_count": 2,
    "warning_count": 0
  }
}
