crates/atlasctl-core/src/snapshots/atlasctl_core__golden__golden__valid-minimal.json.snap
---
source: crates/atlasctl-core/src/lib.rs
expression: json_output
---
{
  "schema_version": 1,
  "tool_version": "0.1.0",
  "repo": {
    "name": "valid-minimal"
  },
  "nodes": [
    {
      "id": "adr:0001-example",
      "kind": "adr",
      "title": "Example ADR",
      "summary": null,
      "paths": [
        {
          "pattern": "docs\\adr\\0001-example.md"
        }
      ],
      "attrs": {},
      "provenance": {
        "source": "docs\\adr\\0001-example.md",
        "line": null,
        "column": null,
        "fragment": "adr:0001-example"
      }
    },
    {
      "id": "artifact:example-report",
      "kind": "artifact",
      "title": "Example report",
      "summary": null,
      "paths": [],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "cmd:ci-fast",
      "kind": "command",
      "title": "Fast CI",
      "summary": null,
      "paths": [],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "crate:engine",
      "kind": "crate",
      "title": "engine",
      "summary": null,
      "paths": [
        {
          "pattern": "crates\\engine"
        }
      ],
      "attrs": {
        "manifest_path": "crates/engine/Cargo.toml",
        "version": "0.1.0"
      },
      "provenance": {
        "source": "Cargo.toml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "req:example",
      "kind": "requirement",
      "title": "Example requirement",
      "summary": null,
      "paths": [],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "id": "scen:example-build",
      "kind": "scenario",
      "title": "Example build",
      "summary": null,
      "paths": [
        {
          "pattern": "crates/engine/src/lib.rs"
        }
      ],
      "attrs": {},
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    }
  ],
  "edges": [
    {
      "from": "adr:0001-example",
      "kind": "explains",
      "to": "req:example",
      "provenance": {
        "source": "docs\\adr\\0001-example.md",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "from": "scen:example-build",
      "kind": "proves",
      "to": "req:example",
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "from": "scen:example-build",
      "kind": "runs_with",
      "to": "cmd:ci-fast",
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "from": "scen:example-build",
      "kind": "emits",
      "to": "artifact:example-report",
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    },
    {
      "from": "scen:example-build",
      "kind": "exercises",
      "to": "crate:engine",
      "provenance": {
        "source": "atlas\\example.atlas.yaml",
        "line": null,
        "column": null,
        "fragment": null
      }
    }
  ],
  "diagnostics": [],
  "metrics": {
    "node_count": 6,
    "edge_count": 5,
    "diagnostic_count": 0,
    "error_count": 0,
    "warning_count": 0
  }
}
